[package]
name = "git-absorb"
version = "0.6.12"

authors = ["Stephen Jung <tummychow511@gmail.com>"]
description = "git commit --fixup, but automatic"
homepage = "https://github.com/tummychow/git-absorb"
repository = "https://github.com/tummychow/git-absorb"
readme = "README.md"
license = "BSD-3-Clause"
edition = "2021"

include = [
    "**/*.rs",
    "Cargo.*",
    "*.md",
]
rust-version = "1.64.0"

[[bin]]
name = "git-absorb"
path = "src/main.rs"

[dependencies.git2]
version = "0.18"
default-features = false

[dependencies]
clap = "2.33"
slog = "2.5"
slog-term = "2.6"
slog-async = "2.5"
memchr = "2.3"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.1"
