[package]
name = "git-absorb"
version = "0.6.17"

authors = ["Stephen Jung <tummychow511@gmail.com>"]
description = "git commit --fixup, but automatic"
homepage = "https://github.com/tummychow/git-absorb"
repository = "https://github.com/tummychow/git-absorb"
readme = "README.md"
license = "BSD-3-Clause"
edition = "2021"

include = [
    "**/*.rs",
    "Cargo.*",
    "*.md",
]
rust-version = "1.74.1"

[[bin]]
name = "git-absorb"
path = "src/main.rs"

[dependencies.git2]
version = "0.20"
default-features = false

[dependencies]
clap = { version = "4", features = ["cargo", "wrap_help", "derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
slog = "2.5"
slog-term = "2.6"
memchr = "2.3"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.1"
